# emout

./: .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  README.en.md  README.md  SPEC.md  example.ipynb  pyproject.toml  setup.py
.agents/plugins/: marketplace.json
.claude/: mcp.json  settings.json
.claude-plugin/: marketplace.json
.claude/agents/: finbound-investigator.md
.claude/rules/: backward-compat.md  checklist.md  data-conventions.md  doc-pairs.md
.github/workflows/: codeql-analysis.yml  docs.yaml  python-publish.yml  tests.yaml
docs/: .buildinfo  Makefile  agent-user-guide.md  emout.data.html  emout.html  emout.plot.html  emout.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js
docs/.doctrees/: emout.doctree  emout.utils.doctree  environment.pickle  index.doctree
docs/_modules/: index.html
docs/_sources/: emout.data.rst.txt  emout.plot.rst.txt  index.rst.txt
docs/doctrees/: emout.data.doctree  emout.doctree  emout.plot.doctree  emout.utils.doctree  environment.pickle  index.doctree  modules.doctree
docs/html/: .buildinfo  emout.data.html  emout.html  emout.plot.html  emout.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/sorce/: emout.utils.rst
docs/source/: conf.py  emout.rst  emout.utils.rst  index.en.rst  index.rst
emout/: __init__.py  article.py  cli.py  data.py  local_data_policy.py  plot.py
emout/core/: __init__.py  boundaries.py  extraction.py  facade.py  units.py
emout/data/: __init__.py  data.py  emout.py  util.py  vector_data.py
emout/distributed/: __init__.py  client.py  clusters.py  config.py  remote_figure.py  remote_render.py  security.py  server_state.py  utils.py
emout/emout/: __init__.py  boundaries.py  extraction.py  facade.py  units.py
emout/plot/: __init__.py  _plot_2d.py  _plot_3d.py  _pyvista_helpers.py  _pyvista_scalar.py  _pyvista_surface.py  _pyvista_vector.py  animation_plot.py  basic_plot.py  contour3d.py  extra_plot.py  plot.py  plot_cross_sections.py  pyvista_plot.py  viz_surfaces.py
emout/utils/: __init__.py  eflux.py  emsesinp.py  group.py  poisson.py  toml_converter.py  units.py  (+1 more)
plugins/: README.en.md  README.md
tests/: conftest.py  test_annotation_compat.py  test_boundaries.py  test_boundaries_extended.py  test_cli.py  test_data.py
(+201 files in other folders)
