[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "emout"
version = "2.14.0"

requires-python = ">=3.9"

description = "Emses output manager"
readme = "README.md"

keywords = ["Visualization", "Simulation", "EMSES"]

authors = [{name = "Nkzono99", email = "j-nakazono@stu.kobe-u.ac.jp"}]

maintainers = [{name = "Nkzono99", email = "j-nakazono@stu.kobe-u.ac.jp"}]

license = {text = "MIT"}

dependencies = [
  "numpy",
  "matplotlib",
  "h5py",
  "f90nml",
  "scipy",
  "pandas",
  "tqdm",
  "scikit-image",
  "tomli; python_version < '3.11'",
  "mpiemses3d-tools",
  "psutil",
  "dask; python_version >= '3.10'",
  "distributed; python_version >= '3.10'",
  "cryptography; python_version >= '3.10'",
]

classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
pyvista = [
  "pyvista",
]
distributed = [
  "psutil",
  "dask; python_version >= \"3.10\"",
  "distributed; python_version >= \"3.10\"",
  "cryptography; python_version >= \"3.10\"",
]
dev = [
  "pytest",
  "pre-commit",
  "ruff",
]

[project.scripts]
emout = "emout.cli:main"

[project.urls]
Repository = "https://github.com/Nkzono99/emout.git"

[tool.setuptools.packages.find]
include = ["emout*"]
namespaces = false

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
  "E741",   # ambiguous variable name (l, I) — common in physics code
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]   # re-exports and star imports
"emout/emout/__init__.py" = ["E402", "F401", "F403"]
"tests/**" = ["F841", "E721"]      # unused vars and type() checks common in tests

[tool.ruff.format]
quote-style = "double"
